--- a/style.css
+++ b/style.css
@@ -226,15 +226,7 @@ input:checked + .slider:before { transform: translateX(26px); }
 .process-error { background-color: #f8d7da; color: #721c24; border-color: #f5c6cb;}
 
 .hidden { display: none !important; }
-#reference-details.invisible {
-    visibility: hidden;
-    max-height: 0;
-    padding: 0;
-    margin-top: 0 !important;
-    border-top: none;
-    overflow: hidden;
-}
-#reference-details { transition: all 0.3s ease-in-out; max-height: 500px; }
+.input-group.disabled, .switch-container.disabled { opacity: 0.5; pointer-events: none; }
 
 #resetSlidersBtn {
     font-size: 0.9rem; background: none; border: 1px solid var(--primary-color);
