--- a/style.css
+++ b/style.css
@@ -130,6 +130,8 @@ h5 { font-size: 1rem; color: #333; margin-bottom: 0.8rem; }
 
 
 .main-config-section { padding: 0.5rem; background-color: #fafafa; border-radius: 8px;}
+.main-config-section .input-group { padding: 0 1rem; }
+.main-config-section .input-group.disabled { opacity: 0.5; pointer-events: none; }
 .switch-container {
     display: flex;
     justify-content: space-between;
@@ -226,7 +228,6 @@ input:checked + .slider:before { transform: translateX(26px); }
 .process-error { background-color: #f8d7da; color: #721c24; border-color: #f5c6cb;}
 
 .hidden { display: none !important; }
-.input-group.disabled, .switch-container.disabled { opacity: 0.5; pointer-events: none; }
 
 #resetSlidersBtn {
     font-size: 0.9rem; background: none; border: 1px solid var(--primary-color);
